--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,9 @@
-body {
-  margin: 0;
-  padding: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-}
+@import url('https://fonts.googleapis.com/css2?family=Trispace:wght@100..800&display=swap');
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+:root {
+    --font-family-trispace: 'Trispace', sans-serif;
 }
